Fix settings styling on mobile view

--- a/ui/app/css/itcss/components/settings.scss
+++ b/ui/app/css/itcss/components/settings.scss
@@ -38,6 +38,7 @@
 
   @media screen and (max-width: 575px) {
     flex-direction: column;
+    padding: 10px 0;
   }
 }
 
@@ -48,6 +49,11 @@
   flex-direction: column;
   padding: 0 5px;
   height: 71px;
+
+  @media screen and (max-width: 575px) {
+    height: initial;
+    padding: 5px 0;
+  }
 }
 
 .settings__content-item-col {
@@ -71,6 +77,7 @@
   padding-left: 10px;
   font-size: 14px;
   height: 40px;
+  border: 1px solid $alto;
 }
 
 .settings__input::-webkit-input-placeholder {
